; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_symfile.c_kern_read_file.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_symfile.c_kern_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kern_direct_file_io_ref_t = type { i32, i32 }

@UIO_READ = common dso_local global i32 0, align 4
@UIO_SYSSPACE = common dso_local global i32 0, align 4
@IO_SYNC = common dso_local global i32 0, align 4
@IO_NODELOCKED = common dso_local global i32 0, align 4
@IO_UNIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kern_read_file(%struct.kern_direct_file_io_ref_t* %0, i32 %1, i8* %2, i64 %3, i32 %4) #0 {
  %6 = alloca %struct.kern_direct_file_io_ref_t*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.kern_direct_file_io_ref_t* %0, %struct.kern_direct_file_io_ref_t** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @UIO_READ, align 4
  %12 = load %struct.kern_direct_file_io_ref_t*, %struct.kern_direct_file_io_ref_t** %6, align 8
  %13 = getelementptr inbounds %struct.kern_direct_file_io_ref_t, %struct.kern_direct_file_io_ref_t* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @UIO_SYSSPACE, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @IO_SYNC, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @IO_NODELOCKED, align 4
  %23 = or i32 %21, %22
  %24 = load i32, i32* @IO_UNIT, align 4
  %25 = or i32 %23, %24
  %26 = load %struct.kern_direct_file_io_ref_t*, %struct.kern_direct_file_io_ref_t** %6, align 8
  %27 = getelementptr inbounds %struct.kern_direct_file_io_ref_t, %struct.kern_direct_file_io_ref_t* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @vfs_context_ucred(i32 %28)
  %30 = load %struct.kern_direct_file_io_ref_t*, %struct.kern_direct_file_io_ref_t** %6, align 8
  %31 = getelementptr inbounds %struct.kern_direct_file_io_ref_t, %struct.kern_direct_file_io_ref_t* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @vfs_context_proc(i32 %32)
  %34 = call i32 @vn_rdwr(i32 %11, i32 %14, i8* %15, i64 %16, i32 %17, i32 %18, i32 %25, i32 %29, i32* null, i32 %33)
  ret i32 %34
}

declare dso_local i32 @vn_rdwr(i32, i32, i8*, i64, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @vfs_context_ucred(i32) #1

declare dso_local i32 @vfs_context_proc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
